--- a/app/src/main/res/layout/content_kristevt_content.xml
+++ b/app/src/main/res/layout/content_kristevt_content.xml
@@ -9,16 +9,14 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/app_name"
         />
+
     <TextView
-        android:id="@+id/elapsed"
+        android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
-    <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:text="@string/app_name"
         />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
