--- a/app/src/main/res/values/spl3g.xml
+++ b/app/src/main/res/values/spl3g.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text_time_pattern">Current date: %s</string>
-    <string name="text_time_from_reboot_pattern">Time from start: %s</string>
+    <string name="spl3g_text_time_pattern">Current date: %s</string>
+    <string name="spl3g_text_time_from_reboot_pattern">Time from start: %s</string>
 </resources>
