--- a/app/src/main/res/layout/content_navigation_screens.xml
+++ b/app/src/main/res/layout/content_navigation_screens.xml
@@ -5,5 +5,5 @@
     android:id="@+id/recycler"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context="com.example.ikr_application.zagora.MainActivity"
     />
