--- a/app/src/main/res/layout/item_screen.xml
+++ b/app/src/main/res/layout/item_screen.xml
@@ -7,5 +7,5 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="30dp"
     android:layout_marginVertical="4dp"
-    tools:context=".MainActivity"
+    tools:context="com.example.ikr_application.zagora.MainActivity"
     />
