--- a/app/src/main/res/layout/item_spl3g_precision.xml
+++ b/app/src/main/res/layout/item_spl3g_precision.xml
@@ -5,5 +5,5 @@
     style="?attr/materialButtonStyle"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".MainActivity"
+    tools:context="com.example.ikr_application.zagora.MainActivity"
     />
