--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,10 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Ikr_application" parent="Base.Theme.Ikr_application" />
+    <style name="Theme.Ikr_application" parent="Base.Theme.Ikr_application">
+        <item name="emojiSearch">@style/Widget.EmojiSearch</item>
+        <item name="emojiCard">@style/Widget.EmojiCard</item>
+        <item name="emojiCardName">@style/Widget.EmojiCard.Name</item>
+        <item name="emojiCardValue">@style/Widget.EmojiCard.Value</item>
+    </style>
 </resources>
