--- a/app/src/main/res/values/stupishin_dimens.xml
+++ b/app/src/main/res/values/stupishin_dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="stu_spacing_s">8dp</dimen>
     <dimen name="stu_spacing_m">12dp</dimen>
 
+    <dimen name="stu_anime_poster_size">72dp</dimen>
+
     <dimen name="stu_button_min_height">40dp</dimen>
     <dimen name="stu_button_padding_h">16dp</dimen>
 </resources>
