--- a/app/src/main/res/values/stupishin_strings.xml
+++ b/app/src/main/res/values/stupishin_strings.xml
@@ -5,7 +5,5 @@
     <string name="stu_anime_empty">Nothing found</string>
     <string name="stu_anime_poster_cd">Anime poster</string>
 
-    <string name="stu_anime_score_pattern">Score: %.1f</string>
-    <string name="stu_anime_year_pattern">Year: %d</string>
-    <string name="stu_anime_episodes_pattern">Episodes: %d</string>
+    <string name="stu_anime_vpn_note">API работает через VPN</string>
 </resources>
