--- a/app/src/main/res/layout/item_grigoran.xml
+++ b/app/src/main/res/layout/item_grigoran.xml
@@ -16,4 +16,10 @@
         android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"/>
 </LinearLayout>
