--- a/app/src/main/res/layout/item_nastyazz.xml
+++ b/app/src/main/res/layout/item_nastyazz.xml
@@ -19,4 +19,9 @@
         android:id="@+id/itemDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"/>
 </LinearLayout>
