--- a/app/src/main/res/values/kristevt.xml
+++ b/app/src/main/res/values/kristevt.xml
@@ -1,5 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="kristevt_text_time_pattern" >Current date: %s</string>
-    <string name="kristevt_elapsed_time_pattern" >Elapsed: %1$s</string>
+    <string name="kristevt_screen_title" >Музычка</string>
+    <string name="kristevt_caption_sort_by_year" >Сортировать по году</string>
+    <string name="kristevt_caption_get_lyrics" >Получить текст песни</string>
+    <string name="kristevt_caption_lyrics_placeholder" >Текст будет здесь…</string>
+
+    <attr name="songCard" />
+    <attr name="songCardTitle" />
+    <attr name="songCardInfo" />
+    <attr name="songCardButton" />
+    <attr name="songSortButton" />
+    <attr name="songLyrics" />
+
+
+    <style name="Widget.SongCard" parent="">
+        <item name="android:padding">16dp</item>
+    </style>
+
+    <style name="Widget.SongCard.Title" parent="Widget.AppCompat.TextView">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Widget.SongCard.Info" parent="Widget.AppCompat.TextView">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
+        <item name="android:alpha">0.8</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
+
+    <style name="Widget.SongCard.Button" parent="Widget.AppCompat.Button">
+
+    </style>
+
+    <style name="Widget.SongSortButton" parent="Widget.AppCompat.Button">
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
+    <style name="Widget.SongLyrics" parent="Widget.AppCompat.TextView">
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body2</item>
+        <item name="android:background">#11000000</item>
+    </style>
 </resources>
