--- a/app/src/main/res/values/dimmension.xml
+++ b/app/src/main/res/values/dimmension.xml
@@ -4,5 +4,10 @@
     <string name="text_name_item_pattern">%1$s (%2$s)</string>
     <string name="title_names_list">Список случайных имен:</string>
     <string name="title_dimmension_screen">Случайные имена</string>
+    <string name="hint_search">Поиск по именам...</string>
+    <string name="hint_first_name">Имя</string>
+    <string name="hint_last_name">Фамилия</string>
+    <string name="button_add_name">Добавить имя</string>
+    <string name="button_refresh">Обновить</string>
 </resources>
 
