--- a/app/src/main/res/layout/roganov_cat_fragment.xml
+++ b/app/src/main/res/layout/roganov_cat_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,8 +28,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textAppearance="@style/TextAppearance.Quovadis.TitleLarge"
         tools:text="Whiskers" />
 
     <com.google.android.material.chip.Chip
@@ -47,5 +45,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Загрузить кота" />
+        android:text="Загрузить кота"
+        android:textAppearance="@style/TextAppearance.Quovadis.BodyMedium"/>
 </LinearLayout>
