--- a/app/src/main/res/layout/content_akiko23_content.xml
+++ b/app/src/main/res/layout/content_akiko23_content.xml
@@ -31,6 +31,15 @@
             tools:text="Time from start: 120 ms"
             />
 
+        <!-- Триггер, управляющий отображением кота -->
+        <com.google.android.material.materialswitch.MaterialSwitch
+            android:id="@+id/show_cat_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/akiko23_show_cat"
+            />
+
         <com.google.android.material.button.MaterialButtonToggleGroup
             android:id="@+id/buttons"
             android:layout_width="match_parent"
@@ -38,6 +47,17 @@
             android:layout_marginTop="12dp"
             app:singleSelection="true"
             app:selectionRequired="false"
+            />
+
+        <!-- Картинка, загружаемая при помощи внешней библиотеки Coil -->
+        <ImageView
+            android:id="@+id/akiko23_image"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_marginTop="16dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            tools:src="@drawable/ic_capybara_outline"
             />
 
         <com.google.android.material.button.MaterialButton
