--- a/app/src/main/res/values/rin2396.xml
+++ b/app/src/main/res/values/rin2396.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="rin2396_text_time_pattern">Current date: %s</string>
     <string name="rin2396_text_time_from_reboot_pattern">Time from start: %s</string>
+    <string name="rin2396_search_hint">Search time entries...</string>
+    <string name="rin2396_add_button">Add Time Entry</string>
+    <string name="rin2396_entries_count">Entries: %d</string>
 </resources>
