--- a/features/stupishin/impl/src/main/res/values/stupishin_strings.xml
+++ b/features/stupishin/impl/src/main/res/values/stupishin_strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="title_stupishin">Stupishin Anime</string>
     <string name="stu_anime_search_hint">Search anime…</string>
     <string name="stu_anime_retry">Try again</string>
     <string name="stu_anime_empty">Nothing found</string>
