added primitivestorage sample

--- a/features/nfirex/impl/src/main/res/values/resources_nfirex.xml
+++ b/features/nfirex/impl/src/main/res/values/resources_nfirex.xml
@@ -6,6 +6,7 @@
     <string name="text_time_from_reboot_pattern">Time from start: %s</string>
 
     <string name="caption_search_emoji_hint">Type emoji name…</string>
+    <string name="caption_search_emoji_none">none</string>
 
     <attr name="emojiSearch" />
     <attr name="emojiCard" />
