--- a/features/nastyazz/impel/src/main/res/layout/fragment_nastyazz.xml
+++ b/features/nastyazz/impel/src/main/res/layout/fragment_nastyazz.xml
@@ -15,7 +15,7 @@
         android:id="@+id/errorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="wrap_content"
+        android:textColor="?attr/colorError"
         android:visibility="gone"/>
 
     <EditText
