move room to separate module

--- a/features/tire/impl/src/main/res/layout/item_case.xml
+++ b/features/tire/impl/src/main/res/layout/item_case.xml
@@ -11,6 +11,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:contentDescription="@string/tire_case_image"
+        android:src="@drawable/ic_case_placeholder"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
