--- a/features/tire/impl/src/main/res/layout/item_collection_pokemon.xml
+++ b/features/tire/impl/src/main/res/layout/item_collection_pokemon.xml
@@ -36,6 +36,20 @@
             android:textAppearance="?attr/textAppearanceCaption"
             android:textColor="@android:color/black" />
 
+        <TextView
+            android:id="@+id/badgeCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="8dp"
+            android:background="@drawable/badge_background"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="2dp"
+            android:visibility="gone" />
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
